kubernetes/apps/observability/grafana/instance/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  annotations:
    external-dns.kubernetes.io/target: "internal.${CLUSTER_DOMAIN}"
spec:
  hostnames: ["grafana.${CLUSTER_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
